--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -4,7 +4,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  top: 50%;
+  top: 70%;
   transform: translateY(-50%);
 }
 
@@ -25,3 +25,33 @@
 #container a {
   text-decoration: none;
 }
+
+.custom-image {
+  width: 100%; /* o cualquier tamaño que desees, como 300px */
+  height: auto; /* para mantener la proporción */
+}
+
+.heart-button {
+  .heart-button {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #ec0707ed; /* Fondo rojo transparente para verificar */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+  }
+  
+}
+
+.heart-button ion-icon {
+  font-size: 24px; /* Tamaño del ícono */
+  color: red; /* Color del corazón */
+}
+
+.icon-spacing {
+  margin: 0 20px; /* Ajusta el valor según sea necesario */
+}
+
+
